--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "build": "parcel build src/index.html --public-url ./"
   },
   "dependencies": {
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "@hello-pangea/dnd": "^18.0.1",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
-    "gh-pages": "^6.3.0",
-    "parcel": "^2.14.0"
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
+    "parcel": "^2.15.4",
+    "typescript": "^5.9.2"
   }
 }
